gzip support 1.8.4 RC1 logging cleanup AtomicNumber interface
git-svn-id: http://hazelcast.googlecode.com/svn/trunk@1202 3f8e66b6-ca9d-11dd-a2b5-e5f827957e07