@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.hazelcast</groupId>
         <artifactId>hazelcast-root</artifactId>
-        <version>1.8.4-SNAPSHOT</version>
+        <version>1.8.4-RC1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -85,6 +85,23 @@
                             <excludes>
                                 <exclude>**/PerformanceTest.java</exclude>
                             </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>client</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>-Xmx512m -XX:MaxPermSize=128M</argLine>
+                            <includes>
+                                <include>**/client/**.java</include>
+                            </includes>
                         </configuration>
                     </plugin>
                 </plugins>
